--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <form id="myForm" action="/submit" method="post">
+    <form id="myForm" action="submit" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" placeholder="Enter your name" required />
       <br />
